--- a/admin/my-app/.env
+++ b/admin/my-app/.env
@@ -1,3 +1,1 @@
-VITE_BACKEND_URL = "http://localhost:4000"
-
-# https://employee-mangement-ak7u.onrender.com
+VITE_BACKEND_URL = "https://employee-mangement-ak7u.onrender.com"
